--- a/Home5/Home5/Views/GameResults/Delete.cshtml
+++ b/Home5/Home5/Views/GameResults/Delete.cshtml
@@ -1,19 +1,19 @@
 ﻿@model Home5.Models.GameResult
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Удалить";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+<h2>Удалить</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Вы уверены что хотите удалить эту запись?</h3>
 <div>
-    <h4>GameResult</h4>
+    <h4>Результат игры</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Result)
+            Результат игры
         </dt>
 
         <dd>
@@ -21,7 +21,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.FirstPlayer)
+            Первый игрок
         </dt>
 
         <dd>
@@ -29,7 +29,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.SecondPlayer)
+            Второй игрок
         </dt>
 
         <dd>
@@ -37,7 +37,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.StepsCount)
+            Количество ходов
         </dt>
 
         <dd>
@@ -45,7 +45,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.GameTime)
+            Дата игры
         </dt>
 
         <dd>
@@ -58,8 +58,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Удалить" class="btn btn-default" /> |
+            @Html.ActionLink("Надад", "Index")
         </div>
     }
 </div>
