--- a/Home5/Home5/Views/GameResults/Details.cshtml
+++ b/Home5/Home5/Views/GameResults/Details.cshtml
@@ -1,18 +1,18 @@
 ﻿@model Home5.Models.GameResult
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Подробная информация";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<h2>Подробная информация</h2>
 
 <div>
-    <h4>GameResult</h4>
+    <h4>Результат игры</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Result)
+            Результат игры
         </dt>
 
         <dd>
@@ -20,7 +20,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.FirstPlayer)
+            Первый игрок
         </dt>
 
         <dd>
@@ -28,7 +28,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.SecondPlayer)
+            Второй игрок
         </dt>
 
         <dd>
@@ -36,7 +36,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.StepsCount)
+            Количество ходов
         </dt>
 
         <dd>
@@ -44,7 +44,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.GameTime)
+            Дата игры
         </dt>
 
         <dd>
@@ -54,6 +54,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Редактировать", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Назад", "Index")
 </p>
